clusters/homelab/environments/development/apps/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: development
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homepage.development.flowerhead.dev`)
      services:
        - kind: Service
          name: homepage
          port: 3000
          sticky:
            cookie:
              httpOnly: false
              secure: true
              sameSite: none
  tls:
    secretName: development-tls
